Fix Tailwind CSS v4 configuration and add environment files

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@ node_modules/
 .pnp.js
 
 # Environment variables
-.env
-.env.local
-.env.*.local
+# .env files are now tracked - BE CAREFUL with sensitive data!
+# .env
+# .env.local
+# .env.*.local
 
 # Docker volumes
 postgres_data/
