--- a/bureau-wonders/package.json
+++ b/bureau-wonders/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.13.2",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "next": "16.0.8",
     "react": "19.2.1",
