--- a/bureau-wonders/package.json
+++ b/bureau-wonders/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.23.25",
     "marked": "^17.0.1",
     "next": "16.0.8",
+    "ogl": "^1.0.11",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
